BB-9470: Mobile/FrontStore > - modal confirmation popup does not fit to display in portrait mode - fixed dialog

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/ui/dialog.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/components/ui/dialog.scss
@@ -16,7 +16,15 @@
 
     border-radius: 4px;
 
+    .ui-widget-content {
+        height: calc(100% - 177px) !important;
+        overflow: auto;
+    }
+
     &.ui-widget-content {
+        max-height: 100%;
+        max-width: calc(100% - 20px);
+
         border: 0;
 
         color: get-color('additional', 'dark');
